<resources>
    <string name="app_name">Password Bank</string>
    <string name="version_name">1.0</string>
    <string name="version_code">1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_message">Create Master Password</string>
    <string name="enter_password">Enter Master Password</string>
    <string name="confirm_password">Confirm Master Password</string>
    <string name="credits"><u>GITHUB</u></string>
    <string name="Confirm">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="successfull_login">SuccessFull Login</string>
    <string name="unsuccessfull_login">Wrong Password</string>
    <string name="successfull_SignUp">SuccessFull signUp</string>
    <string name="unsuccessfull_signUp">SignUp Failed</string>
    <string name="no_password_saved">No Password Saved</string>
    <string name="login">Login</string>
    <string name="password_name">Password Name</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="add_to_vault">Add to Bank</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="url">Url</string>
    <string name="notes">Notes</string>
    <string name="action_settings">About</string>
    <string name="note">NOTE:if you uninstall this app then all the data will be deleted along with it.
        This app does not store your personal data in cloud or servers because of security concerns.
        The main purpose of this application is to manage your passwords efficiently.
    </string>
    <string name="develepor_info">Developed by Sourav Sharma</string>
    <string name="developer_email">souravsharma1210@gmail.com</string>
</resources>
