<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/version"
            android:text="Version 1.0"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_gravity="center"
            android:text="@string/develepor_info"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/developer_email"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/credits"

            />

    </LinearLayout>

</RelativeLayout>