<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText
            android:id="@+id/password_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_name"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"
        >
        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/black"

            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText

            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/update_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/update"
        android:background="@drawable/ripple_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/delete"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:background="@drawable/ripple_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>



</LinearLayout>