<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="100dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/emailId"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText
            android:id="@+id/first_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:password="true"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/login"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/ripple_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/note"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_height="wrap_content" />


</LinearLayout>