<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:id="@+id/text"
        android:text="@string/create_message"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText
            android:id="@+id/first_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:password="true"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        app:hintTextAppearance="@style/TextLabel"

        >
        <EditText
            android:id="@+id/second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:password="true"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/set_password_button"
        android:layout_margin="20dp"
        android:text="@string/set_password"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
